Candra-Firefox-Dark/chrome/userChrome.css
/* ... */
.tab-background-end[selected=true]:-moz-locale-dir(ltr):not(:-moz-lwtheme)::before,
.tab-background-start[selected=true]:-moz-locale-dir(rtl):not(:-moz-lwtheme)::before,
.tab-background-end[selected=true]:-moz-locale-dir(ltr)::after,
.tab-background-start[selected=true]:-moz-locale-dir(rtl)::after {
	border-radius: 0px 2px 0 0 !important;
    border-width: 0px 1px 3px 0px !important;
    border-style: solid !important;
    border-color: rgba(0,0,0,0.9) !important;
    border-bottom-color: rgba(0,0,0,0.9) !important;
}

.tabbrowser-tab:hover > .tab-stack > .tab-background:not([selected=true]),
.tabs-newtab-button:hover {
  -moz-appearance: none !important;
  background-image: none !important;
  background-color: rgba(52, 52, 53, 0.2) !important;
  border-left: 1px solid rgba(37, 37, 38, 0.3) !important;
  border-right: 1px solid rgba(37, 37, 38, 0.3) !important;
  border-radius: 0;
  box-shadow: inset 0 2px 0 #242424 !important;
  border-bottom-width: 2px solid rgba(37, 37, 38, 0.3) !important;
  border-top-width: 0px;
  box-shadow: none !important;
  color: #e0e0e0 !important;
  text-shadow: 0px -1px 0px rgba(0,0,0,.36) !important;
}

.tabbrowser-tab:hover,
.tabs-newtab-button:hover {
  color: alpha(#aaaaab,0.65) !important;
    text-shadow: 0px -1px 0px rgba(0,0,0,.36) !important;
}

.tabbrowser-tab[pinned]:hover > .tab-stack > .tab-background:not([selected=true]) {
  -moz-appearance: none !important;
  background-image: none !important;
  background-color: rgba(52, 52, 53, 0.2) !important;
  border-left: 0px solid rgba(37, 37, 38, 0.3) !important;
  border-right: 0px solid rgba(37, 37, 38, 0.3)!important;
  border-radius: 0;
  box-shadow: none !important;
}

.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) > .tab-stack > .tab-content {
  -moz-appearance: none !important;
  background-image: none !important;
  background-size: auto !important;
}

#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
.tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
  -moz-appearance: none !important;
  -moz-margin-start: 0px !important;
  -moz-margin-end: 0px !important;
  background-image: none !important;
  content: "";
  display: -moz-box;
  width: 0 !important;
}

/* Menus */

panel{
  border: none!important;
}

panel[type="arrow"]{
  -moz-appearance: none!important;
  /*background: transparent!important;*/
  border: none!important;
}

.panel-arrowcontent {
  color: #aaaaab !important;
  background: #0f0f10!important;
  border: none !important;
}

.panel-subviews {
  background-color: #121214!important;
}

#login-fill-details {
  background-color: #121214!important;
  color: #aaaaab!important;
}

.panel-arrow[side="top"],
.panel-arrow[side="bottom"] {
  list-style-image: url("images/panelarrow-vertical.png")!important;
}

.panel-arrow[side="left"],
.panel-arrow[side="right"] {
  list-style-image: url("images/panelarrow-horizontal.png")!important;
}

.menu-iconic menupopup {
  background: #0f0f10 !important;
  border: none !important;
}

.menu-iconic:hover,
.menuitem-iconic:hover {
  background: #303031 !important;
  color: #e0e0e0 !important;
}


/*************************** Window Controls *******************************/
#close-button, #restore-button, #minimize-button {
  -moz-appearance: none !important;
  padding: 7px 6px 5px 6px !important;
}

#close-button { list-style-image: url("images/close.svg") !important; }
#close-button:hover { list-style-image: url("images/close-hover.svg") !important; }
#close-button:active { list-style-image: url("images/close-active.svg") !important; }

#restore-button { list-style-image: url("images/maximize.svg") !important; }
#restore-button:hover { list-style-image: url("images/max-hover.svg") !important; }
#restore-button:active { list-style-image: url("images/max-active.svg") !important; }

#minimize-button { list-style-image: url("images/minimize.svg") !important; }
#minimize-button:hover { list-style-image: url("images/min-hover.svg") !important; }
#minimize-button:active { list-style-image: url("images/min-active.svg") !important; }


/* Findbar */

findbar {
  -moz-appearance: none !important;
  background-color: #0F0F10 !important;
  color: #aaaaab !important;
  border: none !important
}

.findbar-find-previous,
.findbar-find-next {
  background-image: none !important;
  border-color: #3E3E3E !important;
  box-shadow: none !important;
}

.findbar-button:hover,
.findbar-button[checked] {
  color: #000000 !important;
}

